--- a/views/public/css/Library.css
+++ b/views/public/css/Library.css
@@ -3,53 +3,52 @@ a {
     color: inherit; 
 }
 
-/* Related Stories */
-.related-stories {
-    margin-top: 90px;
-    margin-bottom: 30px;
-    text-align: center;
+/* Card truyện */
+.storyBox{
+  display: flex;
+  justify-content: center; 
 }
 
-.card {
-    border: none;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    transition: transform 0.2s;
+#storiesContainer .card {
+  transition: transform 0.2s, box-shadow 0.2s;
+  border-radius: 10px;
+  overflow: hidden;
+  width: 244.67px;
 }
 
-.card:hover {
-    transform: translateY(-5px);
+#storiesContainer .card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
 }
 
-.card img {
-    width: 100%;
-    height: 300px;
-    object-fit: cover; 
-    border-radius: 5px;
+#storiesContainer .card-img-top {
+  height: 330px;
+  width: 250px;
+  object-fit: cover;
 }
 
-/* Footer */
-footer {
-    background-color: #f8f9fa;
-    padding: 30px 0;
-    margin-top: 50px;
+#storiesContainer .card-title {
+  font-size: 1.2rem;
+  line-height: 1.3;
+  font-weight: 600;
+  margin-bottom: 7px;
+  display: -webkit-box; 
+  -webkit-box-orient: vertical; 
+  -webkit-line-clamp: 1; 
+  overflow: hidden; 
+  text-overflow: ellipsis; 
 }
 
-footer ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+#storiesContainer .card-text{
+  font-size: 1rem;
+  line-height: 1.3;
+  margin-bottom: 5px;
+  display: -webkit-box; 
+  -webkit-box-orient: vertical; 
+  -webkit-line-clamp: 1; 
+  overflow: hidden; 
+  text-overflow: ellipsis; 
 }
-
-footer li {
-    margin-bottom: 5px;
-}
-
-footer .footer-title {
-    font-size: 1.2rem;
-    font-weight: bold;
-    margin-bottom: 10px;
-}
-
 
 .voted { background-color: #ff4d4f !important; color: white !important; }
 .followed { background-color: #007bff !important; color: white !important; }
