--- a/views/public/html/Detail_story.ejs
+++ b/views/public/html/Detail_story.ejs
@@ -35,6 +35,9 @@
                 <div class="interaction-container">
                     <i class="fas fa-star"></i> <span id="votes">0</span>
                 </div>
+                <div class="interaction-container">
+                    <i class="fas fa-heart"></i> <span id="totalFollow">0</span>
+                </div>
                 </div>
                 <div class="mt-3">
                 <a href="#" class="btn btn-read">Đọc từ chương 1</a>
@@ -55,8 +58,12 @@
 
         <!-- Pagination -->
         <nav>
-        <ul class="pagination justify-content-center mt-3" id="chapterPagination"></ul>
+            <ul class="pagination justify-content-center mt-3" id="chapterPagination"></ul>
         </nav>
+        <div class="container mt-5">
+            <h3>📚 Truyện đề xuất</h3>
+            <div class="row" id="recommendContainer"></div>
+        </div>
     </div>
 
 
