--- a/views/public/html/Library.ejs
+++ b/views/public/html/Library.ejs
@@ -18,59 +18,19 @@
     <%- include('header.ejs', { user: typeof user !== 'undefined' ? user : null }) %>
 
     <div class="container related-stories">
-        <h2>Thư viện</h2>
-        <div class="row">
-            <a href="" class="col-6 col-md-3 mb-3">
-                <div class="card">
-                    <img src="../images/de.jpg" class="card-img-top" alt="Related Story">
-                    <div class="card-body">
-                        <h5 class="card-title"></h5>
-                    </div>
-                </div>
-            </a>
-
+        <h2 class="text-center">Thư viện</h2>
+        <div class="row" id="storiesContainer">
         </div>
     </div>
 
 
     <!-- Footer -->
-    <footer class="bg-light">
+    <footer class="bg-light py-5 mt-5 border-top">
         <div class="container">
-            <div class="row">
-                <div class="col-md-3">
-                    <ul>
-                        <img src="../images/Story Haven.png" width="130px" height="130px" alt="Story Haven">
-                    </ul>
-                </div>
-                <div class="col-md-3">
-                    <ul>
-                        <li class="footer-title">Dịch vụ</li>
-                        <li><a href="#">Điều khoản sử dụng</a></li>
-                        <li><a href="#">Liên hệ</a></li>
-                        <li><a href="#">Hệ thống nhà sách</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-3">
-                    <ul>
-                        <li class="footer-title">Hỗ trợ</li>
-                        <li><a href="#">Chính sách đổi trả - hoàn tiền</a></li>
-                        <li><a href="#">Phương thức vận chuyển</a></li>
-                        <li><a href="#">Phương thức thanh toán</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-3">
-                    <ul>
-                        <li class="footer-title">Nhà sách bán lẻ</li>
-                        <li>Giám đốc: Tào Thanh Hà | Mai Phương Anh</li>
-                        <li>Địa chỉ: Đại học Phenikaa</li>
-                        <li>Số điện thoại: </li>
-                        <li>Email: </li>
-                        <li>Facebook: </li>
-                    </ul>
-                </div>
-            </div>
+            <p class="text-center">© 2024 Story Haven</p>
         </div>
     </footer>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
