--- a/views/public/html/register.ejs
+++ b/views/public/html/register.ejs
@@ -24,7 +24,10 @@
                         <input type="text" id="name" name="username" placeholder="Tên" required>
                         <input type="email" id="email" name="email" placeholder="Email" required>
                         <div class="error" id="email-error" style="display: none; color: red;"></div>
+
                         <input type="tel" id="phone" name="phone" placeholder="Số điện thoại" required>
+                        <div class="error" id="phone-error" style="display: none; color: red;"></div>
+
                         
                         <input type="password" id="password" name="password" placeholder="Mật khẩu" required>
                         <div class="error" id="password-error" style="display: none; color: red;"></div>
