--- a/views/public/html/header.ejs
+++ b/views/public/html/header.ejs
@@ -64,8 +64,8 @@
           <% if (user) { %>
             <div class="nav-item dropdown ms-3">
                 <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
-                    <img src="<%= user.avatar || '/images/default-avatar.png' %>"
-                        alt="Avatar" class="rounded-circle" width="30" height="30" id="navbarAvatarImg">
+                    <img src="<%= user.avatar || '/images/schwi.png' %>"
+                            alt="Avatar" class="rounded-circle" width="30" height="30" id="navbarAvatarImg">
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end">
                     <li><a class="dropdown-item" href="/account">Hồ sơ của tôi</a></li>
