--- a/views/public/html/New_story.ejs
+++ b/views/public/html/New_story.ejs
@@ -50,32 +50,33 @@
             <p for="category">Thể loại:</p>
             <div id="category-list" class="row">
               <div class="col-6">
-                <label><input type="checkbox" value="Tiên hiệp"> Tiên hiệp</label><br>
-                <label><input type="checkbox" value="Kiếm hiệp"> Kinh dị</label><br>
-                <label><input type="checkbox" value="Ngôn tình"> Ngôn tình</label><br>
-                <label><input type="checkbox" value="Đô thị"> Đô thị</label><br>
-                <label><input type="checkbox" value="Trọng sinh"> Trọng sinh</label><br>
-                <label><input type="checkbox" value="Xuyên không"> Xuyên không</label><br>
-                <label><input type="checkbox" value="Dị giới"> Dị giới</label><br>
                 <label><input type="checkbox" value="Bách hợp"> Bách hợp</label><br>
+                <label><input type="checkbox" value="Cổ đại"> Cổ đại</label><br>
                 <label><input type="checkbox" value="Cung đấu"> Cung đấu</label><br>
-                <label><input type="checkbox" value="Sủng ngọt"> Sủng ngọt</label><br>
+                <label><input type="checkbox" value="Đam mỹ"> Đam mỹ</label><br>
+                <label><input type="checkbox" value="Dị giới"> Dị giới</label><br>
+                <label><input type="checkbox" value="Đô thị"> Đô thị</label><br>
                 <label><input type="checkbox" value="Hài hước"> Hài hước</label><br>
-                <label><input type="checkbox" value="Gia đấu"> Gia đấu</label>
+                <label><input type="checkbox" value="Hệ thống"> Hệ thống</label><br> 
+                <label><input type="checkbox" value="Hiện đại"> Hiện đại</label><br>
+                <label><input type="checkbox" value="Khoa học viễn tưởng"> Khoa học viễn tưởng</label><br>
+                <label><input type="checkbox" value="Kiếm hiệp"> Kinh dị</label><br>
+                <label><input type="checkbox" value="Lịch sử"> Lịch sử</label><br>
+                
               </div>
               <div class="col-6">
-                <label><input type="checkbox" value="Khoa học viễn tưởng"> Khoa học viễn tưởng</label><br>
-                <label><input type="checkbox" value="Huyền huyễn"> Huyền huyễn</label><br>
-                <label><input type="checkbox" value="Cổ đại"> Cổ đại</label><br>
-                <label><input type="checkbox" value="Hiện đại"> Hiện đại</label><br>
                 <label><input type="checkbox" value="Linh dị"> Linh dị</label><br>
-                <label><input type="checkbox" value="Quân sự"> Quân sự</label><br>
-                <label><input type="checkbox" value="Lịch sử"> Lịch sử</label><br>
-                <label><input type="checkbox" value="Dị năng"> Tâm lý</label><br>
+                <label><input type="checkbox" value="Mạt thế"> Mạt thế</label><br>
+                <label><input type="checkbox" value="Ngôn tình"> Ngôn tình</label><br>
+                <label><input type="checkbox" value="Ngược luyến"> Ngược luyến</label><br>
                 <label><input type="checkbox" value="Phiêu lưu"> Phiêu lưu</label><br>
-                <label><input type="checkbox" value="Đam mỹ"> Đam mỹ</label><br>
-                <label><input type="checkbox" value="Kinh dị"> Kinh dị</label><br>
-                <label><input type="checkbox" value="Ngược luyến"> Ngược luyến</label>
+                <label><input type="checkbox" value="Quân sự"> Quân sự</label><br>
+                <label><input type="checkbox" value="Sủng ngọt"> Sủng ngọt</label><br>
+                <label><input type="checkbox" value="Dị năng"> Tâm lý</label><br>
+                <label><input type="checkbox" value="Tiên hiệp"> Tiên hiệp</label><br>
+                <label><input type="checkbox" value="Kinh dị"> Trinh thám</label><br>
+                <label><input type="checkbox" value="Trọng sinh"> Trọng sinh</label><br>
+                <label><input type="checkbox" value="Xuyên không"> Xuyên không</label><br>
               </div>
             </div>
 
