--- a/views/public/html/header.ejs
+++ b/views/public/html/header.ejs
@@ -22,30 +22,30 @@
                           <div class="col-2">
                               <li><a class="dropdown-item" href="/category?category=Dị%20giới">Dị giới</a></li>
                               <li><a class="dropdown-item" href="/category?category=Đô%20thị">Đô thị</a></li>
-                              <li><a class="dropdown-item" href="/category?category=Gia%20đấu">Gia đấu</a></li>
                               <li><a class="dropdown-item" href="/category?category=Hài%20hước">Hài hước</a></li>
+                              <li><a class="dropdown-item" href="/category?category=Hệ%20thống">Hệ thống</a></li>
                           </div>
                           <div class="col-2">
                               <li><a class="dropdown-item" href="/category?category=Hiện%20đại">Hiện đại</a></li>
-                              <li><a class="dropdown-item" href="/category?category=Huyền%20huyễn">Huyền huyễn</a></li>
-                              <li><a class="dropdown-item" href="/category?category=Kiếm%20hiệp">Kiếm hiệp</a></li>
                               <li><a class="dropdown-item" href="/category?category=Khoa%20học%20viễn%20tưởng">Khoa học viễn tưởng</a></li>
-                          </div>
-                          <div class="col-2">
                               <li><a class="dropdown-item" href="/category?category=Kinh%20dị">Kinh dị</a></li>
                               <li><a class="dropdown-item" href="/category?category=Lich%20sử">Lịch sử</a></li>
-                              <li><a class="dropdown-item" href="/category?category=Linh%20dị">Linh dị</a></li>
-                              <li><a class="dropdown-item" href="/category?category=Ngôn%20tình">Ngôn tình</a></li>
                           </div>
                           <div class="col-2">
+                              <li><a class="dropdown-item" href="/category?category=Linh%20dị">Linh dị</a></li>
+                              <li><a class="dropdown-item" href="/category?category=Mạt%20thế">Mạt thế</a></li>
+                              <li><a class="dropdown-item" href="/category?category=Ngôn%20tình">Ngôn tình</a></li>
                               <li><a class="dropdown-item" href="/category?category=Ngược%20luyến">Ngược luyến</a></li>
+                          </div>
+                          <div class="col-2">
                               <li><a class="dropdown-item" href="/category?category=Phiêu%20lưu">Phiêu lưu</a></li>
                               <li><a class="dropdown-item" href="/category?category=Quân%20sự">Quân sự</a></li>
                               <li><a class="dropdown-item" href="/category?category=Sủng%20ngọt">Sủng ngọt</a></li>
+                              <li><a class="dropdown-item" href="/category?category=Tâm%20lý">Tâm lý</a></li>
                           </div>
                           <div class="col-2">
-                              <li><a class="dropdown-item" href="/category?category=Tâm%20lý">Tâm lý</a></li>
                               <li><a class="dropdown-item" href="/category?category=Tiên%20hiệp">Tiên hiệp</a></li>
+                              <li><a class="dropdown-item" href="/category?category=Trinh%20lthám">Trinh thám</a></li>
                               <li><a class="dropdown-item" href="/category?category=Trọng%20sinh">Trọng sinh</a></li>
                               <li><a class="dropdown-item" href="/category?category=Xuyên%20không">Xuyên không</a></li>  
                           </div>
