--- a/views/public/html/Edit_chapter.ejs
+++ b/views/public/html/Edit_chapter.ejs
@@ -45,7 +45,7 @@
         </div>
     </div>
 
-    <script src="../javascript/EditChapter.js" type="text/javascript"></script>
+    <script src="../javascript/Edit_chapter.js" type="text/javascript"></script>
 </body>
 
 </html>
