--- a/views/public/html/New_chapter.ejs
+++ b/views/public/html/New_chapter.ejs
@@ -34,6 +34,6 @@
         </div>
     </div>
 
-    <script src="../javascript/Draft.js" type="text/javascript"></script>
+    <script src="../javascript/New_chapter.js" type="text/javascript"></script>
 </body>
 </html>
