Save local changes before pulling

--- a/views/public/html/login.ejs
+++ b/views/public/html/login.ejs
@@ -27,7 +27,7 @@
                 <div id="errorMessage" style="color: red;"></div>
 
                 <div class="qmk">
-                    <a href="#">Quên mật khẩu?</a>
+                    <a href="/forgot_password">Quên mật khẩu?</a>
                 </div>
                 <div class="last">
                     Chưa có tài khoản?
