--- a/views/public/css/admin_comments.css
+++ b/views/public/css/admin_comments.css
@@ -45,6 +45,9 @@
 .search-filter-controls button.btn {
     padding: 8px 15px;
     font-size: 14px;
+    background-color: #adefd1ff;
+    border-color: #fff;
+    color: #00203fff;
 }
 
 .card-body {
@@ -69,9 +72,9 @@
 }
 
 .admin-table th {
-    background-color: #f5f5f5;
+    background-color: #adefd1ff;
     font-weight: bold;
-    color: #333;
+    color: #00203fff;
 }
 
 .admin-table tbody tr:nth-child(even) {
@@ -198,5 +201,5 @@
 
 .admin-actions button.btn {
     margin-top: 15px;
-    margin-right: 10px; /* Khoảng cách giữa các nút */
+    margin-right: 10px; 
 }
