--- a/views/public/css/admin_users.css
+++ b/views/public/css/admin_users.css
@@ -32,8 +32,8 @@
 
 .search-filter button {
     padding: 10px 18px;
-    background-color: var(--primary-color); /* Sử dụng biến màu */
-    color: var(--text-light); /* Sử dụng biến màu */
+    background-color: #adefd1ff;
+    color: #00203fff;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -65,8 +65,9 @@
 }
 
 #user-table th {
-    background-color: var(--secondary-bg-color); /* Hoặc một màu nền khác */
-    color: var(--text-dark);
+    background-color: #adefd1ff;
+    border-color: #fff;
+    color: #00203fff;
     font-weight: bold;
     text-transform: uppercase;
     font-size: 0.9em;
@@ -168,7 +169,6 @@
     cursor: not-allowed;
     background-color: #f0f0f0;
     color: #888;
-    border-color: #ccc;
 }
 
 
