--- a/views/public/css/index.css
+++ b/views/public/css/index.css
@@ -70,24 +70,29 @@
 .pagination button {
   padding: 8px 16px;
   border: none;
-  background-color: #198754;
-  color: #fff;
+  background-color: #adefd1ff;
+  color: #00203fff;
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.2s;
 }
 
 .pagination button:hover {
-  background-color: #146c43;
+  background-color: #00203fff;
+  color: #adefd1ff;
 }
 
 #page-info {
   font-weight: 500;
 }
 
-/* Responsive: số truyện hiển thị trên 1 dòng */
+.active>.page-link{
+  background-color: #00203fff;
+  color: #adefd1ff;
+}
+
 @media (min-width: 1200px) {
-  /* Màn hình lớn: 4 truyện / hàng */
+
   #storyContainer > div {
     flex: 0 0 25%;
     max-width: 25%;
@@ -95,7 +100,7 @@
 }
 
 @media (max-width: 1199.98px) and (min-width: 992px) {
-  /* Laptop: 3 truyện / hàng */
+
   #storyContainer > div {
     flex: 0 0 33.3333%;
     max-width: 33.3333%;
@@ -103,7 +108,7 @@
 }
 
 @media (max-width: 991.98px) and (min-width: 576px) {
-  /* Tablet: 2 truyện / hàng */
+
   #storyContainer > div {
     flex: 0 0 50%;
     max-width: 50%;
@@ -111,7 +116,6 @@
 }
 
 @media (max-width: 575.98px) {
-  /* Điện thoại: 1 truyện / hàng */
   #storyContainer > div {
     flex: 0 0 100%;
     max-width: 100%;
