--- a/views/public/html/Detail_story.ejs
+++ b/views/public/html/Detail_story.ejs
@@ -10,8 +10,7 @@
     <link rel="stylesheet" href="../css/header.css">
 </head>
 <body>
-    <%- include('header.ejs', { user: typeof user !== 'undefined' ? user : null }) %>
-
+<%- include('header.ejs', { loggedInUser: typeof user !== 'undefined' ? user : null }) %>
 
     <!-- Thông tin truyện -->
     <div class="story">
