--- a/views/public/html/New_story.ejs
+++ b/views/public/html/New_story.ejs
@@ -60,7 +60,7 @@
                 <label><input type="checkbox" value="Hệ thống"> Hệ thống</label><br> 
                 <label><input type="checkbox" value="Hiện đại"> Hiện đại</label><br>
                 <label><input type="checkbox" value="Khoa học viễn tưởng"> Khoa học viễn tưởng</label><br>
-                <label><input type="checkbox" value="Kiếm hiệp"> Kinh dị</label><br>
+                <label><input type="checkbox" value="Kinh dị"> Kinh dị</label><br>
                 <label><input type="checkbox" value="Lịch sử"> Lịch sử</label><br>
                 
               </div>
@@ -72,9 +72,9 @@
                 <label><input type="checkbox" value="Phiêu lưu"> Phiêu lưu</label><br>
                 <label><input type="checkbox" value="Quân sự"> Quân sự</label><br>
                 <label><input type="checkbox" value="Sủng ngọt"> Sủng ngọt</label><br>
-                <label><input type="checkbox" value="Dị năng"> Tâm lý</label><br>
+                <label><input type="checkbox" value="Tâm lý"> Tâm lý</label><br>
                 <label><input type="checkbox" value="Tiên hiệp"> Tiên hiệp</label><br>
-                <label><input type="checkbox" value="Kinh dị"> Trinh thám</label><br>
+                <label><input type="checkbox" value="Trinh thám"> Trinh thám</label><br>
                 <label><input type="checkbox" value="Trọng sinh"> Trọng sinh</label><br>
                 <label><input type="checkbox" value="Xuyên không"> Xuyên không</label><br>
               </div>
