--- a/views/public/html/index.ejs
+++ b/views/public/html/index.ejs
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../css/header.css">
 </head>
 <body>
-<%- include('header.ejs', { user: typeof user !== 'undefined' ? user : null }) %>
+<%- include('header.ejs', { loggedInUser: typeof user !== 'undefined' ? user : null }) %>
 
   <!-- Nội dung -->
   <div class="container py-4">
