--- a/views/public/css/Account.css
+++ b/views/public/css/Account.css
@@ -203,7 +203,7 @@ body {
 }
 
 .tab--active {
-    color: #f3563a; /* Màu cam nổi bật */
+    color: #00203fff; /* Màu cam nổi bật */
     background-color: #fff;
     font-weight: 600;
 }
@@ -215,7 +215,7 @@ body {
     left: 0;
     width: 100%;
     height: 3px;
-    background-color: #f3563a; /* Thanh dưới màu cam */
+    background-color: #adefd1ff; /* Thanh dưới màu cam */
     transform: scaleX(1);
     transition: transform 0.3s ease;
 }
@@ -227,7 +227,7 @@ body {
     left: 0;
     width: 100%;
     height: 3px;
-    background-color: #f3563a;
+    background-color: #adefd1ff;
     transform: scaleX(0); /* Ẩn thanh dưới */
     transition: transform 0.3s ease;
 }
@@ -336,7 +336,7 @@ body {
     overflow: hidden;
     display: block;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-    border: 3px solid #f8613f; /* Viền cam nổi bật */
+    border: 3px solid #adefd1ff; /* Viền cam nổi bật */
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
